# llm_agentic

./: .gitignore  README.md  pyproject.toml
Code/: 01_LLM_Q&A.ipynb  02_Create_LLM_Agent_Python_From_Scratch.ipynb  03_Create_LLM_Agent_Using_LangGraph.ipynb  04_Essay_Writer_Agent.ipynb
Travel/: event_handler.py  flight_handler.py  hotel_handler.py  travel_app.ipynb
src/llm_agentic/: __init__.py  database.py  travel_agency.py  utils.py
src/llm_agentic/templates/: home.html  layout.html
