[project]
name = "llm-agentic"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chiefkemist", email = "chiefkemist+git@outcastgeek.tech" }
]
dependencies = [
    "jupyterlab>=4.2.4",
    "langchain>=0.2.11",
    "langchain-openai>=0.1.17",
    "langchain-community>=0.2.10",
    "openai>=1.37.0",
    "python-dotenv>=1.0.1",
    "langgraph>=0.1.14",
    "tavily-python>=0.3.5",
    "fastapi[all]>=0.111.1",
    "jinja2>=3.1.4",
    "sqlmodel>=0.0.21",
    "httpx>=0.27.0",
    "uvicorn>=0.30.3",
    "pydantic>=2.8.2",
    "serpapi>=0.1.5",
    "pygraphviz>=1.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
    "python-pip>=1.1.1",
]

[tool.rye.scripts]
code_notebooks="rye run jupyter lab --notebook-dir Code"
travel_notebooks="rye run jupyter lab --notebook-dir Travel"
travel_agency_dev = "uvicorn llm_agentic.travel_agency:app --reload"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_agentic"]
